[tool.poetry]
name = "psghk_test_task"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
